change alignitem, fix bugs not redirecting after sort

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -197,7 +197,7 @@ header a {
     .cards {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        /* justify-content: space; */
     }
     .btn-menu {
         display: none;
